# FlightCal

./: Makefile  app.py  core.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
templates/: index.html  manual_entry.html  select_flight.html
tests/: test_core.py
