[project]
name = "flightcal"
version = "0.1.0"
description = "Flight calendar event generator"
requires-python = ">=3.9"
dependencies = [
    "Flask==3.0.3",
    "icalendar==6.0.1",
    "pandas>=2.2.0",
    "pyflightdata==0.8.6.2",
    "pytz==2024.1",
    "gunicorn==23.0.0",
    "numpy>=1.26.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]
